antlr4-utils/msg_exec.g4
/* This ANTLR4 grammar has been generated by Poirot */

grammar msg_exec;

axiom : s EOF;
exe : 'exec ' 'cmd';
msg : 'msg ' params;
params : 'key' ' = ' 'value' | 'key' ' = ' 'value' ' & ' params;
s : exe | exe ' ; ' s | msg | msg ' ; ' s;
