antlr4-utils/msg_execParser.py
# Generated from msg_exec.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class msg_execParser ( Parser ):

    grammarFileName = "msg_exec.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'exec '", "'cmd'", "'msg '", "'key'", 
                     "' = '", "'value'", "' & '", "' ; '" ]

    symbolicNames = [  ]

    RULE_axiom = 0
    RULE_exe = 1
    RULE_msg = 2
    RULE_params = 3
    RULE_s = 4

    ruleNames =  [ "axiom", "exe", "msg", "params", "s" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class AxiomContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def s(self):
            return self.getTypedRuleContext(msg_execParser.SContext,0)


        def EOF(self):
            return self.getToken(msg_execParser.EOF, 0)

        def getRuleIndex(self):
            return msg_execParser.RULE_axiom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAxiom" ):
                listener.enterAxiom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAxiom" ):
                listener.exitAxiom(self)




    def axiom(self):

        localctx = msg_execParser.AxiomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_axiom)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 10
            self.s()
            self.state = 11
            self.match(msg_execParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return msg_execParser.RULE_exe

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExe" ):
                listener.enterExe(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExe" ):
                listener.exitExe(self)




    def exe(self):

        localctx = msg_execParser.ExeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_exe)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 13
            self.match(msg_execParser.T__0)
            self.state = 14
            self.match(msg_execParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MsgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def params(self):
            return self.getTypedRuleContext(msg_execParser.ParamsContext,0)


        def getRuleIndex(self):
            return msg_execParser.RULE_msg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMsg" ):
                listener.enterMsg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMsg" ):
                listener.exitMsg(self)




    def msg(self):

        localctx = msg_execParser.MsgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_msg)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            self.match(msg_execParser.T__2)
            self.state = 17
            self.params()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def params(self):
            return self.getTypedRuleContext(msg_execParser.ParamsContext,0)


        def getRuleIndex(self):
            return msg_execParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)




    def params(self):

        localctx = msg_execParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_params)
        try:
            self.state = 27
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 19
                self.match(msg_execParser.T__3)
                self.state = 20
                self.match(msg_execParser.T__4)
                self.state = 21
                self.match(msg_execParser.T__5)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 22
                self.match(msg_execParser.T__3)
                self.state = 23
                self.match(msg_execParser.T__4)
                self.state = 24
                self.match(msg_execParser.T__5)
                self.state = 25
                self.match(msg_execParser.T__6)
                self.state = 26
                self.params()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exe(self):
            return self.getTypedRuleContext(msg_execParser.ExeContext,0)


        def s(self):
            return self.getTypedRuleContext(msg_execParser.SContext,0)


        def msg(self):
            return self.getTypedRuleContext(msg_execParser.MsgContext,0)


        def getRuleIndex(self):
            return msg_execParser.RULE_s

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterS" ):
                listener.enterS(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitS" ):
                listener.exitS(self)




    def s(self):

        localctx = msg_execParser.SContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_s)
        try:
            self.state = 39
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 29
                self.exe()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 30
                self.exe()
                self.state = 31
                self.match(msg_execParser.T__7)
                self.state = 32
                self.s()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 34
                self.msg()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 35
                self.msg()
                self.state = 36
                self.match(msg_execParser.T__7)
                self.state = 37
                self.s()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





